--- a/main.html
+++ b/main.html
@@ -8,6 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>My Playlist</h1>
+    <!-- List of songs like 'thousand years' with anchor tag and href-->
+    <div class="list">
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=rtOvBOTyX00&pp=ygUOdGhvdXNhbmQgeWVhcnM%3D" target="_blank">Thousand Years</a></li>
+            <li><a href="https://www.youtube.com/watch?v=JGwWNGJdvx8&pp=ygUMc2hhcGUgb2YgeW91" target="_blank">Shape of You</a></li>
+            <li><a href="https://www.youtube.com/watch?v=0zGcUoRlhmw&pp=ygUGY2xvc2Vy" target="_blank">Closer</a></li>
+            <li><a href="https://www.youtube.com/watch?v=fJ9rUzIMcZQ&ab_channel=QueenOfficial" target="_blank">Bohemian Rhapsody</a></li>
+            <li><a href="https://www.youtube.com/watch?v=Ly6ZhQVnVow&ab_channel=LedZeppelin" target="_blank">Stairway to Heaven</a></li>
+        </ul>
+    </div>
+    <div>
+        <h2>Now Playing...</h2>
+        <video class="player_one" controls>
+            <source type="video/mp4" src="https://www.w3schools.com/tags/movie.mp4">
+        </video>
+        <h2>MP3 songs</h2>
+        <audio controls>
+            <source type="audio/mp3" src="https://www.sample-videos.com/audio/mp3/crowd-cheering.mp3">
+        </audio>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
