--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
             <source type="video/mp4" src="https://www.w3schools.com/tags/movie.mp4">
         </video>
         <h2>MP3 songs</h2>
-        <audio controls>
+        <audio class="player_two" controls>
             <source type="audio/mp3" src="https://www.sample-videos.com/audio/mp3/crowd-cheering.mp3">
         </audio>
     </div>
